.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixit-backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fixit-backend-service
  template:
    metadata:
      labels:
        app: fixit-backend-service
    spec:
      containers:
        - name: ${project.artifactId}
          image: ghcr.io/arch-software-fiap/fixit-backend:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-secret
